--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.2.2</version>
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<maven.compiler.release>8</maven.compiler.release>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<log4j2.version>2.17.2</log4j2.version>
 	</properties>
@@ -59,10 +59,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -238,6 +234,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 </project>
